--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <h3 class="text-muted">Project name</h3>
       </div>
       <div class="jumbotron">
-        <h1>Project Name</h1>
-        <p class="lead"> Brief description of project</p>
+        <h1>Eric's Project</h1>
+        <p class="lead"> Eric's project is so awesome!</p>
       </div>
 
       <div class="row marketing">
